objects/TEMarketing__MQLRecord__c.object
<CustomObject>
    <description>MQL Record object holds a history of when a lead qualifies as marketing</description>
    <fields>
        <fullName>Assigned_Distributor__c</fullName>
        <description>Name of the distributor that has been assigned to the MQL, either manually or through automation. Can include distributors that are not on the partner community.</description>
        <inlineHelpText>Name of the distributor that has been assigned to the MQL, either manually or through automation. Can include distributors that are not on the partner community.</inlineHelpText>
        <label>Assigned Distributor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Reject__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Eloqua or Sysadmins to auto reject a MQL</description>
        <inlineHelpText>Used by Eloqua or Sysadmins to auto reject a MQL</inlineHelpText>
        <label>Auto Reject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bad_Data_Type__c</fullName>
        <description>Identifies which data is bad on the associated lead/contact record</description>
        <inlineHelpText>Identifies which data is bad on the associated lead/contact record</inlineHelpText>
        <label>Status Reason Code Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Phone and Email</fullName>
                </value>
                <value>
                    <fullName>Aerospace, Defense &amp; Marine</fullName>
                </value>
                <value>
                    <fullName>Appliances</fullName>
                </value>
                <value>
                    <fullName>Application Tooling</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Channel</fullName>
                </value>
                <value>
                    <fullName>Data &amp; Devices</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Industrial &amp; Commercial Transportation</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit_Level_2__c</fullName>
        <formula>If(!Isblank(TEMarketing__Contact__c),  TEMarketing__Contact__r.Business_Unit_Level_2__c  ,
TEXT( TEMarketing__Lead__r.Business_Unit_Subvertical__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit Level 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Original__c</fullName>
        <description>The original business unit before the MQL was reassigned via the automated rejection rerouting process</description>
        <inlineHelpText>The original business unit before the MQL was reassigned via the automated rejection rerouting process</inlineHelpText>
        <label>Business Unit - Original</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Subvertical__c</fullName>
        <description>Populated from Eloqua  with original data from BUD,  second level of Business Unit (BU Name is the first Level). The filed keeps the original info as received from ELOQUA.</description>
        <label>Business Unit - Subvertical</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A&amp;C</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>RAIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>defines the business unit either based on the Account BU the contact is related to or the defined business unit in the lead</description>
        <formula>If(!Isblank(TEMarketing__Contact__c), TEMarketing__Contact__r.Business_Unit__c ,
TEXT(TEMarketing__Lead__r.Business_Unit__c))</formula>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C2S_Sales_Channel__c</fullName>
        <description>Indicates whether the MQL is Select, Target, Focus, or BU Owned.</description>
        <formula>IF ( CJM_Owned__c , &quot;Select&quot;, 
IF( BEGINS( Key_Customer_Cde__c , &quot;X04&quot; ) || BEGINS( Key_Customer_Cde__c , &quot;x04&quot; ) ,&quot;Target&quot;, 
IF( BEGINS( Key_Customer_Cde__c , &quot;F&quot; ) || BEGINS( Key_Customer_Cde__c , &quot;f&quot; ),&quot;Focus&quot;, &quot;BU Owned&quot;
)))


/*logic moved to prod 9Mar18
IF( BEGINS( Key_Customer_Cde__c , &quot;S&quot; ) || BEGINS( Key_Customer_Cde__c , &quot;s&quot; ), &quot;Select&quot;, 
IF( BEGINS( Key_Customer_Cde__c , &quot;X04&quot; ) || BEGINS( Key_Customer_Cde__c , &quot;x04&quot; ) ,&quot;Target&quot;, 
IF( BEGINS( Key_Customer_Cde__c , &quot;F&quot; ) || BEGINS( Key_Customer_Cde__c , &quot;f&quot; ),&quot;Focus&quot;, 
IF ( CJM_Owned__c , &quot;Select&quot;, &quot;BU Owned&quot;
)) 
))  
*/

/* Previous Logic
If(!Isblank(TEMarketing__Contact__c), 
    IF( TEXT(TEMarketing__Contact__r.Account.Owner.GIBU__c) = &quot;Channel&quot;,&quot;Channel&quot;,&quot;Direct&quot;),

    IF( TEXT(TEMarketing__Lead__r.Owner:User.GIBU__c) = &quot;Channel&quot;,&quot;Channel&quot;,
        IF(ISBLANK(TEXT(TEMarketing__Lead__r.Owner:User.GIBU__c)),
            IF( TEMarketing__Lead__r.Lead_Recipient__c = &quot;Channel&quot;,&quot;Channel&quot;,&quot;Direct&quot;),&quot;Direct&quot;
))) */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the MQL is Select, Target, Focus, or BU Owned.</inlineHelpText>
        <label>C2S Sales Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CJM_Owned__c</fullName>
        <description>Boolean is set to true if the MQLRecord is owned by a CJM queue or person</description>
        <formula>IF( Owner:Queue.QueueName = &quot;Filter Agent - Sales Dev/PIC America&apos;s&quot;, true,
 IF( Owner:Queue.QueueName = &quot;Filter Agent - Sales Dev/PIC EMEA&quot;, true,
  IF( Owner:Queue.QueueName = &quot;Filter Agent - Sales Dev/PIC AP&quot;, true, 
   IF ( Owner:User.CJM_Team_Member__c , true,
  false
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Boolean is set to true if the MQLRecord is owned by a CJM queue or person</inlineHelpText>
        <label>CJM Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup created to establish link between Cases and MQL records</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>MQLRecords</relationshipLabel>
        <relationshipName>MQLRecords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Reporting_Category__c</fullName>
        <description>Inside Sales, Distributor, or Channel DSE</description>
        <formula>IF(TEXT(TEMarketing__Initial_Routing_Method__c) = &apos;Inside Sales&apos;, &apos;Inside Sales&apos;,
IF( NOT(ISBLANK(TEMarketing__Passed_to_Primary_Date__c)), &apos;Distributor&apos;,
IF( C2S_Sales_Channel__c = &apos;Direct&apos;, &apos;Direct&apos;, &apos;Channel DSE&apos; )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Inside Sales, Distributor, or Channel DSE</inlineHelpText>
        <label>Channel Reporting Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Account_Id__c</fullName>
        <formula>IF(ISBLANK(TEMarketing__Contact__c) , &apos;&apos;, TEMarketing__Contact__r.AccountId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_Network_ID__c</fullName>
        <formula>If(!Isblank(TEMarketing__Contact__c), TEMarketing__Contact__r.Owner.Te_Network_Id__c , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Owner Network ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>If(!Isblank(TEMarketing__Contact__c), TEMarketing__Contact__r.Account.BillingCountry  ,
TEMarketing__Lead__r.Country  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCT_Flag__c</fullName>
        <formula>IF(((NOT(ISPICKVAL(TEMarketing__Lead__r.Status, &quot;Converted&quot;)) &amp;&amp; TEMarketing__Lead__r.DCT_Flag__c   == true) || TEMarketing__Contact__r.DCT_Flag__c == true), &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DCT Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCT_Frozen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Boolean value is sent from Eloqua and is the DCT Flag sent on creation of the MQLRecord</description>
        <label>DCT Frozen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eloqua_Lead_Rating__c</fullName>
        <description>Lead rating from Eloqua at the time of MQL creation</description>
        <inlineHelpText>Lead rating from Eloqua at the time of MQL creation</inlineHelpText>
        <label>Eloqua Lead Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>B4</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>D1</fullName>
                </value>
                <value>
                    <fullName>D2</fullName>
                </value>
                <value>
                    <fullName>D3</fullName>
                </value>
                <value>
                    <fullName>D4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>IF( ISBLANK(TEMarketing__Contact__r.Email), TEMarketing__Lead__r.Email, TEMarketing__Contact__r.Email )</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Record_id__c</fullName>
        <label>Energy_Record_id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Lead_ID__c</fullName>
        <description>this field holds the lead ID of the Event Lead (the one that is used to capture the customer info at a customer event).
The ID is used to retrospectively populate an MQL lookup on the event lead record type.</description>
        <label>Event Lead ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Contact_Date__c</fullName>
        <description>Capture the date once first activity(contact to lead/contact) is created after MQL is created. This contact activity is any of &apos;Log Call&apos; or &apos;Email&apos;.</description>
        <label>First Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GIBU__c</fullName>
        <formula>If(!Isblank(TEMarketing__Contact__c), TEMarketing__Contact__r.Contact_Owner_GIBU__c,  TEMarketing__Lead__r.Owner_BU__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GIBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <formula>TEXT(TEMarketing__Lead__r.Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As defined in Lead form</inlineHelpText>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The last Inside Sales user that modified the MQL.  Populated via workflow.</description>
        <inlineHelpText>The last Inside Sales user that modified the MQL.  Populated via workflow.</inlineHelpText>
        <label>Inside Sales User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MQLRecords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Lead_Converted_order_taken__c</fullName>
        <description>If lead is converted as converted and order taken it will show as &apos;Yes&apos; other it will show as &apos;No&apos;</description>
        <formula>IF(  AND(TEMarketing__Lead__r.IsConverted = true,TEMarketing__Lead__r.Order_Value_Taken__c &gt;0) , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <label>Is Lead Converted-order taken</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Customer_Cde__c</fullName>
        <description>This field is populated from the Key Customer Ind field in master data (via integration) for the &apos;Account&apos; record type. 
For prospect accounts, it will be mastered and maintained in Salesforce. 
This field is used to designate customers of a particular kind: A&apos;s, B&apos;s, C&apos;s, D&apos;s, Focus, Select, Target. The descriptions of these codes can be found in the Key Customer Codes table (oracle).</description>
        <label>Key Customer Cde</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Contact_Country__c</fullName>
        <formula>IF(ISBLANK(TEMarketing__Contact__c), TEMarketing__Lead__r.Country,TEMarketing__Contact__r.MailingCountry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead/Contact Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Contact_State__c</fullName>
        <formula>IF(ISBLANK(TEMarketing__Contact__c), TEMarketing__Lead__r.State,TEMarketing__Contact__r.MailingState)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead/Contact State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <formula>TEMarketing__Lead__r.Lead_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Queue__c</fullName>
        <formula>TEMarketing__Lead__r.Owner:Queue.QueueName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Queue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <description>he lead source of the MQL. From the Lead Source - Most Recent field in Eloqua at the time of MQL creation.</description>
        <inlineHelpText>he lead source of the MQL. From the Lead Source - Most Recent field in Eloqua at the time of MQL creation.</inlineHelpText>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Campaign Chat</fullName>
                </value>
                <value>
                    <fullName>Campaign Contact Us</fullName>
                </value>
                <value>
                    <fullName>Campaign Document Download</fullName>
                </value>
                <value>
                    <fullName>Campaign Form</fullName>
                </value>
                <value>
                    <fullName>Campaign Registration</fullName>
                </value>
                <value>
                    <fullName>PIC Hot Lead</fullName>
                </value>
                <value>
                    <fullName>Request a Price</fullName>
                </value>
                <value>
                    <fullName>Te.com</fullName>
                    <default>true</default>
                    <label>Te.com</label>
                </value>
                <value>
                    <fullName>Te.com Chat</fullName>
                </value>
                <value>
                    <fullName>Te.com Contact Us</fullName>
                </value>
                <value>
                    <fullName>Te.com Document Download</fullName>
                </value>
                <value>
                    <fullName>Te.com Registration</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>WeChat Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MQL_Expired_Date__c</fullName>
        <formula>IF(AND(TEMarketing__Inquiry_Status__c = &apos;Sales Rejected&apos;,OR(ISPICKVAL(Status_Reason_Code2__c, &apos;Rejected due to age / backlog clean-up&apos;), ISPICKVAL(Status_Reason_Code2__c, &apos;Automatically rejected due to new MQL&apos;))), DATEVALUE(TEMarketing__Rejected_Date__c),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MQL Expired Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MQL_Flag__c</fullName>
        <formula>IF( ISBLANK(TEMarketing__Contact__r.LastName), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;), IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MQL Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MQL_Link_to_Opportunity_Date__c</fullName>
        <label>MQL Link to Opportunity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MQL_Owner_GIBU__c</fullName>
        <description>GIBU of the MQL Owner (User)</description>
        <formula>TEXT(Owner:User.GIBU__c)</formula>
        <inlineHelpText>GIBU of the MQL Owner (User)</inlineHelpText>
        <label>MQL Owner GIBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MQL_Owner_Profile__c</fullName>
        <formula>Owner:User.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MQL Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MQL_Source__c</fullName>
        <label>MQL Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MQL_Status__c</fullName>
        <formula>IF(AND(ISBLANK(MQL_Link_to_Opportunity_Date__c), ISBLANK(Sales_Rejected_Date__c), ISBLANK(MQL_Expired_Date__c) ),&quot;Active&quot;,&quot;Closed&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MQL Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_5_Year_Revenue__c</fullName>
        <description>shows the 5 year revenue from opportunities</description>
        <formula>TEMarketing__Opportunity__r.Five_Year_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity 5 Year Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Value_Taken__c</fullName>
        <description>If the lead as order taken value will populate on MQL Record</description>
        <formula>TEMarketing__Lead__r.Order_Value_Taken__c</formula>
        <label>Order Value Taken $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_MQL_Type__c</fullName>
        <description>Defines if a lead is related to a Contact or Lead. 
Remark: A MQL record can be related to both if a lead got converted into a Contact, in that case the formula shows the MQL related to the lead only. Origin of MQL record is not change</description>
        <formula>IF(NOT(ISBLANK(TEMarketing__Lead__c)), &quot;Lead&quot;, &quot;Contact&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original MQL Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Matches_Parent__c</fullName>
        <description>Does the MQL owner match the Lead/Contact owner?</description>
        <formula>LEFT(OwnerId, 15) =  LEFT(Parent_Owner_Id__c,15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Matches Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <description>Defines the Region for the MQLRecord based on the Lead Region or Account.Billing Region (if MQL is a contact). The Region is based on the geography associated to the Lead or Account (NO LONGER TO THE OWNER OF THE LEAD OR CONTACT).</description>
        <formula>If( Country__c = &apos;Japan&apos; || Country__c = &apos;JP&apos;, &apos;Japan&apos;, 

If(!Isblank(TEMarketing__Contact__c),  TEMarketing__Contact__r.Account.Billing_Region__c  ,
Text( TEMarketing__Lead__r.Region__c ))
)</formula>
        <inlineHelpText>Defines the Region for the MQLRecord based on the Lead Region or Account.Billing Region (if MQL is a contact). The Region is based on the geography associated to the Lead or Account (NO LONGER TO THE OWNER OF THE LEAD OR CONTACT).</inlineHelpText>
        <label>Region (Reporting)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_is_Inside_Sales__c</fullName>
        <description>Is the current MQL owner Inside Sales</description>
        <formula>CONTAINS(Lead_Queue__c  , &apos;Sales Dev&apos;) ||  Owner:User.PIC_Role_Groups__c = &apos;PIC Inside Sales&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is the current MQL owner Inside Sales</inlineHelpText>
        <label>Owner is Inside Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PIC_Agent_Name__c</fullName>
        <description>Captures the PIC Agent Name that originated the hot lead</description>
        <inlineHelpText>Captures the PIC Agent Name that originated the hot lead</inlineHelpText>
        <label>PIC Agent Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Owner_Id__c</fullName>
        <description>Owner ID of the Contact or Lead</description>
        <formula>IF(ISBLANK( TEMarketing__Contact__r.OwnerId), TEMarketing__Lead__r.OwnerId, TEMarketing__Contact__r.OwnerId )</formula>
        <label>Parent Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passed_to_Distributor__c</fullName>
        <formula>NOT(ISBLANK( TEMarketing__Passed_to_Primary_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passed to Distributor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reassigned_Date__c</fullName>
        <description>Date that the MQL was reassigned to a different Business Unit via the automated rejection rerouting process</description>
        <inlineHelpText>Date that the MQL was reassigned to a different Business Unit via the automated rejection rerouting process</inlineHelpText>
        <label>Reassigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Region_Inside_Sales__c</fullName>
        <description>The regions for inside sales.  [Deprecated] No longer required.  Inside sales MQLs now routed by lead assignment rules.</description>
        <label>zzDeprecated - Region - Inside Sales</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_to__c</fullName>
        <description>Defines if a lead is related to a  Contact or Lead.  Remark: a MQL record can be related to both if a lead got converted into a Contact, in that case the formula shows the MQL related to the contact</description>
        <formula>IF(ISBLANK(TEMarketing__Contact__c), &quot;Lead&quot;,&quot;Contact&quot;)</formula>
        <label>Related to</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <formula>TEXT(TEMarketing__Lead__r.ROLE__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Role from Lead form</inlineHelpText>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rejected_Date__c</fullName>
        <formula>IF(AND(TEMarketing__Inquiry_Status__c = &apos;Sales Rejected&apos;,NOT(OR(ISPICKVAL(Status_Reason_Code2__c, &apos;Rejected due to age / backlog clean-up&apos;), ISPICKVAL(Status_Reason_Code2__c, &apos;Automatically rejected due to new MQL&apos;)))), DATEVALUE(TEMarketing__Rejected_Date__c),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rejected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Special_Reporting_Category__c</fullName>
        <description>Created to capture reporting values for special processes, such as BU specific inside sales groups</description>
        <inlineHelpText>Created to capture reporting values for special processes</inlineHelpText>
        <label>Special Reporting Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Appliances Inside Sales Americas</fullName>
                </value>
                <value>
                    <fullName>DND Inside Sales Americas</fullName>
                </value>
                <value>
                    <fullName>DND Inside Sales China</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Reason_Code2__c</fullName>
        <description>The Status Reason Code from either the related Contact or Lead</description>
        <inlineHelpText>The Status Reason Code from either the related Contact or Lead</inlineHelpText>
        <label>Status Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Automatically rejected due to new MQL</fullName>
                </value>
                <value>
                    <fullName>Bad contact data</fullName>
                </value>
                <value>
                    <fullName>No immediate opportunity</fullName>
                </value>
                <value>
                    <fullName>Non or unrelated business / competitor</fullName>
                </value>
                <value>
                    <fullName>Non-responsive lead</fullName>
                </value>
                <value>
                    <fullName>Order Taken</fullName>
                </value>
                <value>
                    <fullName>Rejected due to age / backlog clean-up</fullName>
                </value>
                <value>
                    <fullName>This Lead does not belong to my business unit.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Reason_Code__c</fullName>
        <description>The Status Reason Code from either the related Contact or Lead [Deprecated] Replaced by a text field which captures the point in time value</description>
        <formula>IF( TEXT( TEMarketing__Contact__r.Status_Reason_Code__c) = &apos;&apos;,  TEXT(TEMarketing__Lead__r.STATUS_REASON_CODE__c)  , TEXT(TEMarketing__Contact__r.Status_Reason_Code__c))</formula>
        <inlineHelpText>The Status Reason Code from either the related Contact or Lead</inlineHelpText>
        <label>zzDeprecated - Status Reason Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <description>Additional information about a rejected MQL</description>
        <inlineHelpText>Additional information about a rejected MQL</inlineHelpText>
        <label>Status Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subvertical_Account__c</fullName>
        <description>defines the subvertical BU of the MQL record based on either the Account sub vertical the contact belongs too or based on the lead owner or Industry</description>
        <formula>If(!Isblank(TEMarketing__Contact__c),  TEMarketing__Contact__r.Business_Unit_Level_2__c  , 
IF( Business_Unit__c  &lt;&gt; &quot;Industrial&quot;,&quot;&quot;,
IF(TEXT(TEMarketing__Lead__r.Business_Unit_Subvertical__c)  &lt;&gt; &quot;&quot;,TEXT(TEMarketing__Lead__r.Business_Unit_Subvertical__c),
CASE( TEMarketing__Lead__r.Industry ,
&quot;A&amp;C&quot;,&quot;A&amp;C&quot;,
&quot;Alternative Energy&quot;,&quot;IB&quot;,
&quot;Automation &amp; Control&quot;,&quot;A&amp;C&quot;,
&quot;Commercial and Building Equipment&quot;,&quot;IB&quot;,
&quot;HVAC&quot;,&quot;IB&quot;,
&quot;IB&quot;,&quot;IB&quot;,
&quot;Industrial&quot;,&quot;A&amp;C&quot;,
&quot;Industrial Machinery&quot;,&quot;A&amp;C&quot;,
&quot;Lighting&quot;,&quot;IB&quot;,
&quot;Rail&quot;,&quot;Rail&quot;,
&quot;Railway and Mass Transportation&quot;,&quot;Rail&quot;,
&quot;Other&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subvertical BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Account_Share_ID__c</fullName>
        <description>Used to store the Account Share ID that is created when a Contact MQL is shared with a distributor</description>
        <label>Account Share ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MQLRecords</relationshipLabel>
        <relationshipName>MQLRecords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Age__c</fullName>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Assigned_to_Sales_Rep_Date__c</fullName>
        <description>Date that the MQL was assigned to a sales user</description>
        <inlineHelpText>Date that the MQL was assigned to a sales user</inlineHelpText>
        <label>Assigned to Sales Rep Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TEMarketing__BU_Channel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BU - Channel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMarketing__BU_Name__c</fullName>
        <label>BU Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Campaign_Touches__c</fullName>
        <label>Campaign Touches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>MQLRecords</relationshipLabel>
        <relationshipName>MQLRecords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Composite_Key__c</fullName>
        <externalId>true</externalId>
        <label>Composite Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Confidence__c</fullName>
        <label>Confidence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>